--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </main>
       <!-- Footer section -->
       <footer>
-         <p>© Pete Thinkful. All rights reserved.</p>
+         <p>Â© Pete Thinkful. All rights reserved.</p>
       </footer>
    </body>
 </html>
