--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
          </section>
          <!-- TODO: Add Contact section here -->
          <section id="contact">
-         <div> 
+         <div id="peteContact">
          <h2>Contact</h2>
          <p>I'd love to hear from you! Please feel free to contact or follow me:</p>
          <ol>
